* HTML Formatter is broken in cucumber 0.6.2 and cuke4duke 0.2.3 (#567 Dan Fitch)
* Ensure consistent load order of support files (#564 Mike Sassak)
* Fix various places in PDF formatter where HTML entities could break prawn (Matt Wynne)
* The rerun formatter outputs failed, pending and undefined scenarios (before: only failing) (Aslak Hellesøy)

=== New features
* Links to step definitions are now clickable in TextMate's HTML report (Rob Aldred)
* Add diff! message to wire protocol to allow for immediate diff response to invokes (Matt Wynne)

== 0.6.2 2010-01-18

=== Bugfixes
* Update --help for --tags which was out of date. (Aslak Hellesøy)
* Explicitly use Prawn 0.6.3 for pdf formatter since 0.7.1 is broken (Aslak Hellesøy)
* PDF formatter renders tables incorrectly (#553 Andy Waite)
* Better colouring in HTML report (Rob Aldred)
* Detect output encoding properly on JRuby+Windows (Aslak Hellesøy)
* Added option to override output encoding on Windows with an CUCUMBER_OUTPUT_ENCODING env var (Aslak Hellesøy)
* PDF generation requires 'prawn-format' (#558 Aslak Hellesøy)

=== New features
* Show profiles in error scenario summary. (#550 Joseph Wilk)

=== Removed features
* element_at and table_at have been removed. Use tableish in cucumber-rails instead. (Aslak Hellesœy)

== 0.6.1 2010-01-03

=== Bugfixes
* Fixed broken console handling on Windows/JRuby that was introduced in 0.6.0. (Aslak Hellesøy)

== 0.6.0 2010-01-03

Bumping to 0.6.0 for this release since we're breaking backwards compatibility with tags.

=== Changed Features
* Tag boolean logic is inverted. What was ORed before is now ANDed and vice versa. (#504 Aslak Hellesøy)
  This makes it more practical in most cases to mix tags from profiles and the command line

  In previous versions the following command line:
  
    --tags @foo,~@bar --tags @zap (on the command line)
  
  or the following Hook:
  
    Before("@foo,~@bar", "@zap") (for Hooks)
  